--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <style>
+                
+            </style>
         <!-- This is where we keep data and information about the document itself (metadata) -->
         <!-- things like...-->
         <!-- links to css and other code files-->
         <!-- the type of character encoding this html uses (not necessary for now)-->
         <!-- the icon or favicon we see-->
+        <title>Sam McMillan Bio Page</title>
     </head>
 
     <body>
