made a few edits to html structure/indentation

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
+
     <head>
-            <style>
-                
-            </style>
-        <!-- This is where we keep data and information about the document itself (metadata) -->
-        <!-- things like...-->
-        <!-- links to css and other code files-->
-        <!-- the type of character encoding this html uses (not necessary for now)-->
-        <!-- the icon or favicon we see-->
+        <meta charset="UTF-8">
         <title>Sam McMillan Bio Page</title>
+        <style>
+            
+        </style>
     </head>
 
     <body>
